[gd_scene load_steps=7 format=2]

[ext_resource path="res://Models/bars/BarButton.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.403908, 0.270931, 0.398116 )

[sub_resource type="SpatialMaterial" id=4]
resource_name = "_defaultMat_x0028_Clone_x0029_"
albedo_color = Color( 0.537255, 0.537255, 0.537255, 1 )

[sub_resource type="ArrayMesh" id=5]
surfaces/0 = {
"aabb": AABB( -0.5, 0, -0.5, 1, 1, 1.00001 ),
"array_data": PoolByteArray( 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 63, 0, 129, 127, 193, 102, 182, 153, 61, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 127, 193, 102, 182, 204, 56, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 129, 127, 193, 102, 54, 153, 61, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 127, 193, 102, 54, 204, 56, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 191, 127, 0, 0, 193, 102, 182, 51, 59, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 191, 127, 0, 0, 193, 102, 182, 153, 57, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 127, 0, 0, 193, 102, 54, 51, 59, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 127, 0, 0, 193, 102, 54, 153, 57, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 191, 127, 127, 127, 193, 102, 54, 51, 59, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 127, 127, 127, 193, 102, 182, 51, 59, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 191, 127, 127, 127, 193, 102, 54, 153, 57, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 191, 127, 127, 127, 193, 102, 182, 153, 57, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 129, 193, 102, 54, 51, 59, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 129, 193, 102, 182, 51, 59, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 63, 0, 0, 129, 193, 102, 54, 153, 57, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 0, 0, 129, 193, 102, 182, 153, 57, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 191, 129, 0, 127, 129, 102, 54, 153, 57, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 129, 0, 127, 129, 102, 54, 51, 59, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 63, 129, 0, 127, 129, 102, 182, 153, 57, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 63, 129, 0, 127, 129, 102, 182, 51, 59, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 191, 0, 127, 127, 193, 102, 182, 153, 61, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 63, 0, 127, 127, 193, 102, 182, 204, 56, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 191, 0, 127, 127, 193, 102, 54, 153, 61, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 0, 127, 127, 193, 102, 54, 204, 56 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 3, 0, 1, 0, 2, 0, 4, 0, 6, 0, 5, 0, 7, 0, 5, 0, 6, 0, 8, 0, 10, 0, 9, 0, 11, 0, 9, 0, 10, 0, 12, 0, 14, 0, 13, 0, 15, 0, 13, 0, 14, 0, 16, 0, 18, 0, 17, 0, 19, 0, 17, 0, 18, 0, 20, 0, 22, 0, 21, 0, 23, 0, 21, 0, 22, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"material": SubResource( 4 ),
"name": "_defaultMat_x0028_Clone_x0029_",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="SpatialMaterial" id=6]
resource_name = "_defaultMat_x0028_Clone_x0029_"
albedo_color = Color( 0.219608, 0.239216, 0.384314, 1 )

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( -0.5, 0, -0.5, 1, 1, 1.00001 ),
"array_data": PoolByteArray( 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 63, 0, 129, 127, 193, 102, 182, 153, 61, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 127, 193, 102, 182, 204, 56, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 129, 127, 193, 102, 54, 153, 61, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 127, 193, 102, 54, 204, 56, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 191, 127, 0, 0, 193, 102, 182, 51, 59, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 191, 127, 0, 0, 193, 102, 182, 153, 57, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 127, 0, 0, 193, 102, 54, 51, 59, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 127, 0, 0, 193, 102, 54, 153, 57, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 191, 127, 127, 127, 193, 102, 54, 51, 59, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 127, 127, 127, 193, 102, 182, 51, 59, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 191, 127, 127, 127, 193, 102, 54, 153, 57, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 191, 127, 127, 127, 193, 102, 182, 153, 57, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 129, 193, 102, 54, 51, 59, 0, 0, 0, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 129, 193, 102, 182, 51, 59, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 63, 0, 0, 129, 193, 102, 54, 153, 57, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 0, 0, 129, 193, 102, 182, 153, 57, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 191, 129, 0, 127, 129, 102, 54, 153, 57, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 191, 129, 0, 127, 129, 102, 54, 51, 59, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 63, 129, 0, 127, 129, 102, 182, 153, 57, 0, 0, 0, 191, 0, 0, 0, 0, 0, 0, 0, 63, 129, 0, 127, 129, 102, 182, 51, 59, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 191, 0, 127, 127, 193, 102, 182, 153, 61, 0, 0, 0, 191, 0, 0, 128, 63, 0, 0, 0, 63, 0, 127, 127, 193, 102, 182, 204, 56, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 191, 0, 127, 127, 193, 102, 54, 153, 61, 0, 0, 0, 63, 0, 0, 128, 63, 0, 0, 0, 63, 0, 127, 127, 193, 102, 54, 204, 56 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 3, 0, 1, 0, 2, 0, 4, 0, 6, 0, 5, 0, 7, 0, 5, 0, 6, 0, 8, 0, 10, 0, 9, 0, 11, 0, 9, 0, 10, 0, 12, 0, 14, 0, 13, 0, 15, 0, 13, 0, 14, 0, 16, 0, 18, 0, 17, 0, 19, 0, 17, 0, 18, 0, 20, 0, 22, 0, 21, 0, 23, 0, 21, 0, 22, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"material": SubResource( 6 ),
"name": "_defaultMat_x0028_Clone_x0029_",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[node name="BarButton" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.46446, 0 )
shape = SubResource( 3 )

[node name="plat" type="MeshInstance" parent="."]
transform = Transform( -1, 0, 0, 0, 0.2, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 5 )

[node name="button" type="MeshInstance" parent="."]
transform = Transform( -0.8, 0, 0, 0, 0.2, 0, 0, 0, 0.8, 0, 0.1, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("")

[node name="PressTween" type="Tween" parent="."]

[node name="BarTween" type="Tween" parent="."]

[connection signal="body_shape_entered" from="." to="." method="_on_BarButton_body_shape_entered"]
